l10n: migrate php strings already used on unsupported/details in upgradedialog.lang files
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103854 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/be/upgradedialog.lang
+++ b/be/upgradedialog.lang
@@ -1,8 +1,5 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
-Get the Newest Firefox
+Атрымайце найноўшы Firefox
 
 
 ;The Newest Firefox is Here!
@@ -30,7 +27,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+<a %s>Атрымайце абнаўленне</a> - хутка і задарма!
 
 
 ;get the latest in security
@@ -38,7 +35,7 @@ get the latest in security
 
 
 ;experience faster performance
-experience faster performance
+атрымайце лепшую працавыніковасць
 
 
 ;enjoy greater customization
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+заставайцеся ў бяспецы ў сетцы
 
 
 ;Enjoy new features
-Enjoy new features
+атрымайце асалоду ад новых асаблівасцяў
 
 
 ;URGENT!
-URGENT!
+УВАГА!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+Ваша версія Firefox больш не засцярожаная ад сеткавых нападаў.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
