--- a/el/upgradedialog.lang
+++ b/el/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 Βάλτε τον νεότερο Firefox
 
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+Συνεχίστε να είστε ασφαλής στο διαδίκτυο.
 
 
 ;Enjoy new features
-Enjoy new features
+Εκμεταλλευτείτε τα νέα χαρακτηριστικά.
 
 
 ;URGENT!
-URGENT!
+ΕΠΕΙΓΟΝ!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+Η έκδοση του Firefox που έχετε, δεν προστατεύεται πια από δικτυακές επιθέσεις.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
