--- a/eo/upgradedialog.lang
+++ b/eo/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 Havu la lastan Firefox
 
@@ -32,6 +29,7 @@ Ekzistas nova versio de Firefox kiu povas pli bone protekti vin kontraŭ retatak
 ;Get the upgrade — it’s fast & free!
 Ricevu la ĝisdatigon — estas rapide kaj senpage!
 
+
 ;get the latest in security
 get the latest in security
 
@@ -39,8 +37,10 @@ get the latest in security
 ;experience faster performance
 spertu pli rapida funkciado
 
+
 ;enjoy greater customization
 ĝuu ampleksigitan agordadon
+
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
 Via versio de Firefox estos baldaŭ sendefenda kontraŭ retatakoj.
@@ -49,15 +49,17 @@ Via versio de Firefox estos baldaŭ sendefenda kontraŭ retatakoj.
 ;Stay safe online
 Estu sekura en la reto
 
+
 ;Enjoy new features
 Ĝuu novajn trajtojn
+
 
 ;URGENT!
 URĜA!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+Via versio de Firefox ne plu estas protektita kontraŭ retaj atakoj.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
@@ -78,6 +80,7 @@ Ni rekomendas:
 
 ;Downloading a compatible browser
 Elŝuti kongruan retesplorilon
+
 
 ;Installing a free upgrade to your <a %s>operating system</a>
 Instali senpagan ĝisdatigon por via <a %s>mastruma sistemo</a>
