--- a/es-CL/upgradedialog.lang
+++ b/es-CL/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 Obtén el último Firefox
 
@@ -30,7 +27,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+<a %s>Consigue la actualización</a> - ¡es rápida y gratuita!
 
 
 ;get the latest in security
@@ -38,7 +35,7 @@ get the latest in security
 
 
 ;experience faster performance
-experience faster performance
+consigue un rendimiento mejorado
 
 
 ;enjoy greater customization
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+permanece seguro en línea
 
 
 ;Enjoy new features
-Enjoy new features
+disfruta las nuevas características
 
 
 ;URGENT!
-URGENT!
+¡Urgente!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+Tu versión de Firefox ya no está protegida contra ataques en línea.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
