--- a/eu/upgradedialog.lang
+++ b/eu/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 Eskuratu Firefoxik berriena
 
@@ -30,7 +27,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+<a %s>Eguneratu</a> - bizkor eta dohainik!
 
 
 ;get the latest in security
@@ -38,7 +35,7 @@ get the latest in security
 
 
 ;experience faster performance
-experience faster performance
+hobetu errendimendua eta abiadura
 
 
 ;enjoy greater customization
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+nabigatu sarean segurtasunez
 
 
 ;Enjoy new features
-Enjoy new features
+gozatu ezaugarri berriekin
 
 
 ;URGENT!
-URGENT!
+GARRANTZITSUA!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+Zure Firefoxen bertsioak ez zaitu gaur egungo sareko erasoetatik babesten.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
