--- a/fr/upgradedialog.lang
+++ b/fr/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 Obtenir la dernière version de Firefox
 
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+restez en sécurité en ligne
 
 
 ;Enjoy new features
-Enjoy new features
+appréciez les nouvelles fonctionnalités
 
 
 ;URGENT!
-URGENT!
+URGENT !
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+Votre version de Firefox n'est plus protégée contre les attaques en ligne.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
