--- a/gu-IN/upgradedialog.lang
+++ b/gu-IN/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 નવું Firefox મેળવો
 
@@ -30,7 +27,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+<a %s>સુધારાઓ મેળવો</a> - તે ઝડપી અને મુક્ત છે!
 
 
 ;get the latest in security
@@ -38,7 +35,7 @@ get the latest in security
 
 
 ;experience faster performance
-experience faster performance
+ઝડપી પ્રભાવ મેળવો
 
 
 ;enjoy greater customization
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+સલામત રીતે ઓનલાઇન રહો
 
 
 ;Enjoy new features
-Enjoy new features
+નવા ગુણધર્મોનો આનંદ માણો
 
 
 ;URGENT!
-URGENT!
+અગત્યનું!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+તમારી Firefox ની આવૃત્તિ એ ઓનલાઇન હુમલાઓ વિરુદ્દ લાંબા સમય સુધી સુરક્ષિત નથી.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
