--- a/hi-IN/upgradedialog.lang
+++ b/hi-IN/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 ताज़ातरीन फ़ायरफ़ॉक्स पाएँ
 
@@ -30,7 +27,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+<a %s>उन्नत संस्करण पाएँ</a> - यह अधिक तेज और निःशुल्क है!
 
 
 ;get the latest in security
@@ -38,7 +35,7 @@ get the latest in security
 
 
 ;experience faster performance
-experience faster performance
+अधिक तेज कार्यकुशलता पाएँ
 
 
 ;enjoy greater customization
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+ऑनलाइन सुरक्षित रहें
 
 
 ;Enjoy new features
-Enjoy new features
+नई सुविधाओं का आनंद लें
 
 
 ;URGENT!
-URGENT!
+बेहद जरूरी!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+फ़ायरफ़ॉक्स का आपका मौजूदा संस्करण ऑनलाइन हमले के खिलाफ अब सुरक्षित नहीं रह गया है.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
