--- a/hu/upgradedialog.lang
+++ b/hu/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 Töltse le a legújabb Firefoxot
 
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+legyen biztonságban az interneten
 
 
 ;Enjoy new features
-Enjoy new features
+élvezze az új funkciókat
 
 
 ;URGENT!
-URGENT!
+SÜRGŐS!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+A jelenleg használt Firefox verzió nem nyújt védelmet az online támadások ellen.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
