--- a/kn/upgradedialog.lang
+++ b/kn/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 ಹೊಚ್ಚ ಹೊಸ ಫೈರ್ಫಾಕ್ಸನ್ನು ಪಡೆದುಕೊಳ್ಳಿ
 
@@ -30,7 +27,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+<a %s>ನವೀಕರಣಗೊಳಿಸಿ</a> - ವೇಗವಾಗಿ ಆಗುತ್ತದೆ ಹಾಗು ಉಚಿತವಾಗಿದೆ!
 
 
 ;get the latest in security
@@ -38,7 +35,7 @@ get the latest in security
 
 
 ;experience faster performance
-experience faster performance
+ವೇಗವಾದ ಕಾರ್ಯನಿರ್ವಹಣೆ
 
 
 ;enjoy greater customization
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+ಆನ್‌ಲೈನಿನಲ್ಲಿ ಸುರಕ್ಷಿತವಾಗಿರಿ
 
 
 ;Enjoy new features
-Enjoy new features
+ಹೊಸ ಸವಲತ್ತುಗಳನ್ನು ಆನಂದಿಸಿ
 
 
 ;URGENT!
-URGENT!
+ತ್ವರೆ ಮಾಡಿ!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+ನಿಮ್ಮಲ್ಲಿರುವ ಫೈರ್ಫಾಕ್ಸಿನ ಆವೃತ್ತಿಯು ಆನ್‌ಲೈನ್‌ ಧಾಳಿಗಳಿಂದ ನಿಮ್ಮನ್ನು ರಕ್ಷಿಸುವುದಿಲ್ಲ.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
