--- a/ku/upgradedialog.lang
+++ b/ku/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 Firefoxa herî nû bistîne
 
@@ -30,7 +27,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+<a %s>Bilind bike</a> - lezgîn û belaş e!
 
 
 ;get the latest in security
@@ -38,7 +35,7 @@ get the latest in security
 
 
 ;experience faster performance
-experience faster performance
+derbasî performansa lezgîntir bibe
 
 
 ;enjoy greater customization
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+xwe bixe ewlehiyê
 
 
 ;Enjoy new features
-Enjoy new features
+taybetiyên nû bistîne
 
 
 ;URGENT!
-URGENT!
+GIRÎNG!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+Guhertoya te ya Firefoxê êdî li hemberî êrîşên webê nayê parastin.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
