--- a/mk/upgradedialog.lang
+++ b/mk/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 Земете го најновиот Firefox
 
@@ -30,7 +27,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+<a %s>Надградете</a> - брзо е и бесплатно!
 
 
 ;get the latest in security
@@ -38,7 +35,7 @@ get the latest in security
 
 
 ;experience faster performance
-experience faster performance
+добијте побрзи перформанси
 
 
 ;enjoy greater customization
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+останете безбедни на мрежата
 
 
 ;Enjoy new features
-Enjoy new features
+уживајте во новите можности
 
 
 ;URGENT!
-URGENT!
+ИТНО!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+Вашата верзија на Firefox повеќе нема да биде заштитувана од нападите на интернет.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
