--- a/ml/upgradedialog.lang
+++ b/ml/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 ഏറ്റവും പുതിയ ഫയര്‍ഫോക്സ് ലഭ്യമാക്കൂ
 
@@ -30,7 +27,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+<a %s>പുതിയതു് ഡൌണ്‍ലോഡ് ചെയ്യൂ</a> - വേഗവും സൌജന്യവുമാണു്!
 
 
 ;get the latest in security
@@ -38,7 +35,7 @@ get the latest in security
 
 
 ;experience faster performance
-experience faster performance
+മെച്ചപ്പെട്ട പ്രവര്‍ത്തനം ലഭ്യമാക്കൂ
 
 
 ;enjoy greater customization
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+സുരക്ഷിതമായി ഓണ്‍ലൈന്‍ പ്രവര്‍ത്തിയ്ക്കൂ
 
 
 ;Enjoy new features
-Enjoy new features
+പുതിയ വിശേഷതകള്‍ ആസ്വദിയ്ക്കൂ
 
 
 ;URGENT!
-URGENT!
+ശ്രദ്ധിയ്ക്കൂ...!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+നിങ്ങളുടെ ഫയര്‍ഫോക്സിന്റെ പതിപ്പിനു് ഓണ്‍ലൈന്‍ ആക്രമണങ്ങളില്‍ നിന്നും സുരക്ഷ ലഭ്യമല്ല.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
