--- a/nb-NO/upgradedialog.lang
+++ b/nb-NO/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 Last ned den nyeste Firefox
 
@@ -30,7 +27,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+<a %s>Last ned oppdateringen</a> - det går raskt og er gratis!
 
 
 ;get the latest in security
@@ -38,7 +35,7 @@ get the latest in security
 
 
 ;experience faster performance
-experience faster performance
+få bedre ytelse
 
 
 ;enjoy greater customization
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+vær trygg på nettet
 
 
 ;Enjoy new features
-Enjoy new features
+bruk de nye funksjonene
 
 
 ;URGENT!
-URGENT!
+HASTER!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+Firefox-versjonen du bruker beskytter ikke lenger mot angrep på nettet.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
