--- a/or/upgradedialog.lang
+++ b/or/upgradedialog.lang
@@ -1,8 +1,5 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
-Get the Newest Firefox
+ନୂତନତମ Firefox କୁ ଗ୍ରହଣ କରନ୍ତୁ
 
 
 ;The Newest Firefox is Here!
@@ -30,7 +27,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+<a %s>ଉନ୍ନୟନକୁ ଗ୍ରହଣ କରନ୍ତୁ</a> - ଏହା ତୀବ୍ର ଏବଂ ମାଗଣା!
 
 
 ;get the latest in security
@@ -38,7 +35,7 @@ get the latest in security
 
 
 ;experience faster performance
-experience faster performance
+ତୀବ୍ରତମ କାର୍ଯ୍ୟଦକ୍ଷତା ହାସଲ କରନ୍ତୁ
 
 
 ;enjoy greater customization
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+ଅନଲାଇନରେ ସୁରକ୍ଷିତ ରୁହନ୍ତୁ
 
 
 ;Enjoy new features
-Enjoy new features
+ନୂତନ ବିଶେଷତାଗୁଡ଼ିକୁ ଉପଲବ୍ଧ କରନ୍ତୁ
 
 
 ;URGENT!
-URGENT!
+ତୁରନ୍ତ!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+ଆପଣଙ୍କ Firefox ସଂସ୍କରଣ ବର୍ତ୍ତମାନ ଅନଲାଇନ ଆକ୍ରମଣରୁ ସୁରକ୍ଷିତ ନୁହଁ।
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
