--- a/si/upgradedialog.lang
+++ b/si/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 නවතම ෆයර්ෆොක්ස් නිකුතුව ලබාගන්න
 
@@ -30,7 +27,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+<a %s>යාවත් කිරීම ගන්න</a> - එය වේගවත් ඒවගේම නොමිලේ!
 
 
 ;get the latest in security
@@ -38,7 +35,7 @@ get the latest in security
 
 
 ;experience faster performance
-experience faster performance
+වේගවත් ක්‍රියාකාරිත්වය ලබා ගන්න
 
 
 ;enjoy greater customization
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+අන්තර්ජාලයේ ආරක්‍ෂිතව ඉන්න
 
 
 ;Enjoy new features
-Enjoy new features
+අලුත්ම ගුණාංග අත්විදින්න
 
 
 ;URGENT!
-URGENT!
+හදිස්සියි!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+ඔබ භාවිත කරන Firefox වෙළුම තවදුරටත් සබැඳි ප්‍රහාරයන්ගෙන් ආරක්‍ෂා නොකරයි.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
