--- a/sk/upgradedialog.lang
+++ b/sk/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 Získajte najnovší Firefox
 
@@ -30,7 +27,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+<a %s>Aktualizujte</a> - rýchlo a zadarmo!
 
 
 ;get the latest in security
@@ -38,7 +35,7 @@ get the latest in security
 
 
 ;experience faster performance
-experience faster performance
+získate vyšší výkon
 
 
 ;enjoy greater customization
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+budete online v bezpečí
 
 
 ;Enjoy new features
-Enjoy new features
+užijete si nové funkcie
 
 
 ;URGENT!
-URGENT!
+POZOR!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+Vaša verzia Firefoxu už viac nie je chránená proti online útokom.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
