--- a/ta/upgradedialog.lang
+++ b/ta/upgradedialog.lang
@@ -1,8 +1,5 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
-Get the Newest Firefox
+புதிய Firefox-ஐ பெறுங்கள்
 
 
 ;The Newest Firefox is Here!
@@ -30,7 +27,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+<a %s>மேம்படுத்தலை பெறவும்</a> - இது விரைவானது மற்றும் இலவசமானது!
 
 
 ;get the latest in security
@@ -38,7 +35,7 @@ get the latest in security
 
 
 ;experience faster performance
-experience faster performance
+விரைவான செயல்திறனை பெற
 
 
 ;enjoy greater customization
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+பாதுகாப்பான ஆன்லைனில் இருக்க
 
 
 ;Enjoy new features
-Enjoy new features
+புதிய அம்சங்களை அனுபவிக்க
 
 
 ;URGENT!
-URGENT!
+அவசரம்!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+உங்கள் Firefox பதிப்பு ஆன்லைன் தாக்குதலுக்கு பாதுகாப்பாக இருக்காது.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
