--- a/te/upgradedialog.lang
+++ b/te/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 కొంగొత్త ఫైర్‌ఫాక్సును పొందండి
 
@@ -30,7 +27,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+<a %s>నవీకరణని తెచ్చుకోండి</a> - తర్వరగా అయిపోతుంది మరియు ఉచితం !
 
 
 ;get the latest in security
@@ -38,7 +35,7 @@ get the latest in security
 
 
 ;experience faster performance
-experience faster performance
+వేగవంతమైన విహారణను పొందండి
 
 
 ;enjoy greater customization
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+ఆన్‌లైన్లో సురక్షితంగా ఉండండి
 
 
 ;Enjoy new features
-Enjoy new features
+కొత్త సౌలభ్యాలను ఆనందించండి
 
 
 ;URGENT!
-URGENT!
+అత్యవసరం!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+మీరు ఉపయోగిస్తున్న ఫైర్‌ఫాక్స్ సంచిక ఆన్‌లైన్ దాడులను ఎదుర్కోడానికి సురక్షితం కాదు.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
