--- a/zh-TW/upgradedialog.lang
+++ b/zh-TW/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 取得最新的 Firefox
 
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+保持線上安全
 
 
 ;Enjoy new features
-Enjoy new features
+體驗全新功能
 
 
 ;URGENT!
-URGENT!
+緊急！
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+您所使用的 Firefox 版本將不再受到網路攻擊的保護
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
