--- a/ar/upgradedialog.lang
+++ b/ar/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 احصل على أحدث فَيَرفُكس
 
@@ -30,7 +27,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+<a %s>قُم بالترقية</a> - إنها سريعة ومجانية!
 
 
 ;get the latest in security
@@ -38,7 +35,7 @@ get the latest in security
 
 
 ;experience faster performance
-experience faster performance
+احصل على أداء أسرع
 
 
 ;enjoy greater customization
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+ابق آمنًا على الخط
 
 
 ;Enjoy new features
-Enjoy new features
+استمتع بالمزايا الجديدة
 
 
 ;URGENT!
-URGENT!
+عاجل!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+الإصدارة التي تستخدمها من فَيَرفُكس لم تعد محمية من هجمات الإنترنت.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
