--- a/as/upgradedialog.lang
+++ b/as/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 শেহতীয়া Firefox প্ৰাপ্ত কৰক
 
@@ -30,7 +27,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+<a %s>উন্নত সংস্কৰণ পাওক</a> - ই দ্ৰুত আৰু বিনামূলীয়া!
 
 
 ;get the latest in security
@@ -38,7 +35,7 @@ get the latest in security
 
 
 ;experience faster performance
-experience faster performance
+দ্ৰুত কাৰ্য্যক্ষমতা পাওক
 
 
 ;enjoy greater customization
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+অন-লাইন হওঁতে সুৰক্ষিত থাকক
 
 
 ;Enjoy new features
-Enjoy new features
+নতুন বৈশিষ্টসমূহৰ সুবিধা লওক
 
 
 ;URGENT!
-URGENT!
+জৰুৰী!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+আপোনাৰ Firefox -ৰ সংস্কৰণ অন-লাইন আক্ৰমণৰ বাবে আৰু সুৰক্ষিত নহয়।
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
