--- a/bn-BD/upgradedialog.lang
+++ b/bn-BD/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 নতুনতম ফায়ারফক্স  নিয়ে নিন
 
@@ -30,7 +27,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+<a %s>আপগ্রেড গ্রহন করুন</a> - এটি দ্রুত এবং মুক্ত!
 
 
 ;get the latest in security
@@ -38,7 +35,7 @@ get the latest in security
 
 
 ;experience faster performance
-experience faster performance
+দ্রুত কাজের সুবিধা নিন
 
 
 ;enjoy greater customization
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+নিরাপদে অনলাইনে থাকুন
 
 
 ;Enjoy new features
-Enjoy new features
+নতুন বৈশিষ্ট্যগুলোউপভোগ করুন
 
 
 ;URGENT!
-URGENT!
+জরুরী!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+আপনার ফায়ারফক্স সংস্করণটি আর অনলাইন আক্রমণ থেকে সুরক্ষিত নয়।
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
