--- a/bn-IN/upgradedialog.lang
+++ b/bn-IN/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 সাম্প্রতিকতম Firefox-র সংস্করণ প্রাপ্ত করুন
 
@@ -30,7 +27,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+<a %s>আপগ্রেড প্রাপ্ত করুন</a> - বিনামূল্যে ও দ্রুত!
 
 
 ;get the latest in security
@@ -38,7 +35,7 @@ get the latest in security
 
 
 ;experience faster performance
-experience faster performance
+দ্রুত কর্মক্ষমতা
 
 
 ;enjoy greater customization
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+আন-লাইন অবস্থায় নিরাপদ থাকুন
 
 
 ;Enjoy new features
-Enjoy new features
+নতুন বৈশিষ্ট্যের লাভ নিন
 
 
 ;URGENT!
-URGENT!
+জরুরী সূচনা!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+আপনার ব্যবহৃত Firefox-র সংস্করণটি অন-লাইন উৎপন্ন আক্রমণের হাত থেকে বর্তমানে সুরক্ষিত নয়।
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
