--- a/ca/upgradedialog.lang
+++ b/ca/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 Obteniu el Firefox més nou
 
@@ -30,7 +27,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+<a %s>Baixeu l'actualització</a> - és ràpid i gratuït!
 
 
 ;get the latest in security
@@ -38,7 +35,7 @@ get the latest in security
 
 
 ;experience faster performance
-experience faster performance
+tingueu un rendiment millor
 
 
 ;enjoy greater customization
@@ -50,11 +47,11 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+estigueu segur en línia
 
 
 ;Enjoy new features
-Enjoy new features
+gaudiu de les noves funcions
 
 
 ;URGENT!
@@ -62,7 +59,7 @@ URGENT!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+La vostra versió del Firefox ja no està protegida contra atacs en línia.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
