--- a/cs/upgradedialog.lang
+++ b/cs/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 Získejte nejnovější Firefox
 
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+zůstaňte v bezpečí
 
 
 ;Enjoy new features
-Enjoy new features
+těšte se z nových funkcí
 
 
 ;URGENT!
-URGENT!
+URGENTNÍ!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+Vaše verze Firefoxu již není chráněna proti online útokům.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
