--- a/cy/upgradedialog.lang
+++ b/cy/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 Estynnwch y Firefox Diweddaraf
 
@@ -30,7 +27,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+<a %s>Estyn y fersiwn newydd</a> - mae'n gyflym ac am ddim!
 
 
 ;get the latest in security
@@ -38,7 +35,7 @@ get the latest in security
 
 
 ;experience faster performance
-experience faster performance
+pori'n gynt
 
 
 ;enjoy greater customization
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+cadw'n ddiogel arlein
 
 
 ;Enjoy new features
-Enjoy new features
+mwynhau nodweddion newydd
 
 
 ;URGENT!
-URGENT!
+AR FRYS!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+Nid yw eich fersiwn o Firefox wedi'i ddiogelu rhag ymosodiadau arlein bellach.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
