--- a/da/upgradedialog.lang
+++ b/da/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 Hent den nyeste Firefox
 
@@ -30,7 +27,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+<a %s>Hent opdateringen</a> - det er hurtigt og gratis!
 
 
 ;get the latest in security
@@ -38,7 +35,7 @@ get the latest in security
 
 
 ;experience faster performance
-experience faster performance
+få større ydeevne
 
 
 ;enjoy greater customization
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+vær sikker online
 
 
 ;Enjoy new features
-Enjoy new features
+brug de nye funktioner
 
 
 ;URGENT!
-URGENT!
+HASTER!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+Din version af Firefox er ikke længere beskyttet mod online angreb.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
