--- a/es-AR/upgradedialog.lang
+++ b/es-AR/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 Descargá el nuevo Firefox
 
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+permanecé seguro en la red
 
 
 ;Enjoy new features
-Enjoy new features
+disfrutá de nuevas funcionalidades
 
 
 ;URGENT!
-URGENT!
+¡URGENTE!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+Tu versión de Firefox ya no está protegida contra ataques online.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
