--- a/es-ES/upgradedialog.lang
+++ b/es-ES/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 Consigue el nuevo Firefox
 
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+permanece seguro en la red
 
 
 ;Enjoy new features
-Enjoy new features
+disfruta de nuevas características
 
 
 ;URGENT!
-URGENT!
+¡URGENTE!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+Tu versión de Firefox ya no te protege frente a ataques en la red.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
