--- a/fi/upgradedialog.lang
+++ b/fi/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 Lataa uusin versio
 
@@ -30,7 +27,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+<a %s>Lataa päivitys</a> - se on helppoa ja maksutonta!
 
 
 ;get the latest in security
@@ -38,7 +35,7 @@ get the latest in security
 
 
 ;experience faster performance
-experience faster performance
+selaa nopeammin
 
 
 ;enjoy greater customization
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+käytä verkkoa turvallisesti
 
 
 ;Enjoy new features
-Enjoy new features
+uusia ominaisuuksia
 
 
 ;URGENT!
-URGENT!
+TÄRKEÄÄ!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+Käyttämäsi Firefox-versio ei enää suojaa verkkohyökkäyksiltä.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
