--- a/fy-NL/upgradedialog.lang
+++ b/fy-NL/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 Krij de nijste Firefox
 
@@ -30,7 +27,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+<a %s>Krij de fernijing</a> - it is fluch en fergees!
 
 
 ;get the latest in security
@@ -38,7 +35,7 @@ get the latest in security
 
 
 ;experience faster performance
-experience faster performance
+krij fluggere prestaasjes
 
 
 ;enjoy greater customization
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+bliuw feilich online
 
 
 ;Enjoy new features
-Enjoy new features
+haw wille oan nije funksjes
 
 
 ;URGENT!
-URGENT!
+PAS OP!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+Jo ferzje fan Firefox wurdt net langer beskerme tsjin online oanfallen.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
