--- a/ga-IE/upgradedialog.lang
+++ b/ga-IE/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 Faigh an Firefox is déanaí
 
@@ -30,7 +27,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+<a %s>Faigh an leagan nua</a> - tá sé tapa agus saor in aisce!
 
 
 ;get the latest in security
@@ -38,7 +35,7 @@ get the latest in security
 
 
 ;experience faster performance
-experience faster performance
+brabhsáil níos sciobtha
 
 
 ;enjoy greater customization
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+bí slán sábháilte ar líne
 
 
 ;Enjoy new features
-Enjoy new features
+go leor gnéithe nua
 
 
 ;URGENT!
-URGENT!
+PRÁINNEACH!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+Níl an leagan de Firefox atá agat cosanta ar ionsaithe ar líne a thuilleadh.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
