--- a/is/upgradedialog.lang
+++ b/is/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 Náðu í nýjasta Firefox
 
@@ -30,7 +27,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+<a %s>Náðu í uppfærslu</a> - hraðvirkara og ókeypis!
 
 
 ;get the latest in security
@@ -38,7 +35,7 @@ get the latest in security
 
 
 ;experience faster performance
-experience faster performance
+fáðu aukna afkastagetu
 
 
 ;enjoy greater customization
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+vertu öruggur á netinu
 
 
 ;Enjoy new features
-Enjoy new features
+upplifðu nýja eiginleika
 
 
 ;URGENT!
-URGENT!
+MIKILVÆGT!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+Firefox útgáfan þín er ekki lengur vernduð gagnvart árásum á netinu.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
