--- a/ko/upgradedialog.lang
+++ b/ko/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 Firefox 최신 버전 받기
 
@@ -30,7 +27,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+<a %s>바로 업그레이드</a> - 무료 및 신기능 제공!
 
 
 ;get the latest in security
@@ -38,7 +35,7 @@ get the latest in security
 
 
 ;experience faster performance
-experience faster performance
+더 빠른 성능
 
 
 ;enjoy greater customization
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+더 안전한 서비스
 
 
 ;Enjoy new features
-Enjoy new features
+다양한 신기능
 
 
 ;URGENT!
-URGENT!
+중요 공지
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+지금 사용하시는 버전은 더 이상 보안상 안전하지 않습니다.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
