--- a/lt/upgradedialog.lang
+++ b/lt/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 Parsisiųskite naujausią „Firefox“ laidą
 
@@ -30,7 +27,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+<a %s>Parsisiųskite naujinimą</a> – tai neužtruks ir nieko nekainuos!
 
 
 ;get the latest in security
@@ -38,7 +35,7 @@ get the latest in security
 
 
 ;experience faster performance
-experience faster performance
+mėgaukitės spartesniu naršymu
 
 
 ;enjoy greater customization
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+internete išlikite saugūs
 
 
 ;Enjoy new features
-Enjoy new features
+atraskite naujas funkcijas
 
 
 ;URGENT!
-URGENT!
+SVARBU!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+Jūsų naudojama naršyklės „Firefox“ laida Jūsų nebesaugo nuo internetinių atakų.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
