--- a/lv/upgradedialog.lang
+++ b/lv/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 Iegūstiet jaunāko Firefox
 
@@ -30,7 +27,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+<a %s>Iegūstiet jauninājumu</a> - tas būs ātri un par brīvu!
 
 
 ;get the latest in security
@@ -38,7 +35,7 @@ get the latest in security
 
 
 ;experience faster performance
-experience faster performance
+iegūstiet uzlabotu ātrdarbību
 
 
 ;enjoy greater customization
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+esiet drošībā
 
 
 ;Enjoy new features
-Enjoy new features
+izbaudiet jaunas iespējas
 
 
 ;URGENT!
-URGENT!
+SVARĪGI!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+Jūsu Firefox versija vairs nepasargā no apdraudējumiem internetā.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
