--- a/mr/upgradedialog.lang
+++ b/mr/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 सर्वात नवीन फॉयरफॉक्स प्राप्त करा
 
@@ -30,7 +27,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+<a %s>सुधारणा प्राप्त करा</a> - ते वेगवान व मोफत आहे!
 
 
 ;get the latest in security
@@ -38,7 +35,7 @@ get the latest in security
 
 
 ;experience faster performance
-experience faster performance
+गतिशील कामगिरी प्राप्त करा
 
 
 ;enjoy greater customization
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+ऑनलाइन सुरक्षीत रहा
 
 
 ;Enjoy new features
-Enjoy new features
+नवीन गुणविशेषांची मजा लुटा
 
 
 ;URGENT!
-URGENT!
+अति आवश्यक!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+फायरफॉक्सची आवृत्ती यापुढे ऑनलाइन हल्ला विरूद्ध सुरक्षीत राहणार नाही.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
