--- a/nl/upgradedialog.lang
+++ b/nl/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 Download de nieuwste Firefox
 
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+blijf veilig online
 
 
 ;Enjoy new features
-Enjoy new features
+geniet van nieuwe functies
 
 
 ;URGENT!
-URGENT!
+DRINGEND!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+Uw versie van Firefox wordt niet langer beschermd tegen online aanvallen.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
