--- a/nn-NO/upgradedialog.lang
+++ b/nn-NO/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 Get the Newest Firefox
 
@@ -30,7 +27,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+<a %s>Get the upgrade</a> - it’s fast and free!
 
 
 ;get the latest in security
@@ -38,7 +35,7 @@ get the latest in security
 
 
 ;experience faster performance
-experience faster performance
+get faster performance
 
 
 ;enjoy greater customization
@@ -50,11 +47,11 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+stay safe online
 
 
 ;Enjoy new features
-Enjoy new features
+enjoy new features
 
 
 ;URGENT!
