--- a/pa-IN/upgradedialog.lang
+++ b/pa-IN/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 ਸਭ ਤੋਂ ਨਵਾਂ ਫਾਇਰਫਾਕਸ ਲਵੋ
 
@@ -30,7 +27,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+<a %s>ਅੱਪਗਰੇਡ ਲਵੋ ਜੀ</a> - ਇਹ ਤੇਜ਼ ਅਤੇ ਮੁਫ਼ਤ ਹੈ!
 
 
 ;get the latest in security
@@ -38,7 +35,7 @@ get the latest in security
 
 
 ;experience faster performance
-experience faster performance
+ਹੋਰ ਵੀ ਤੇਜ਼ ਕਾਰਗੁਜ਼ਾਰੀ ਪਾਓ
 
 
 ;enjoy greater customization
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+ਆਨਲਾਈਨ ਸੁਰੱਖਿਅਤ ਰਹੋ
 
 
 ;Enjoy new features
-Enjoy new features
+ਨਵੇਂ ਫੀਚਰ ਲਵੋ
 
 
 ;URGENT!
-URGENT!
+ਲਾਜ਼ਮੀ!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+ਤੁਹਾਡੇ ਫਾਇਰਫਾਕਸ ਦਾ ਵਰਜਨ ਹੁਣ ਆਨਲਾਈਨ ਹਮਲਿਆਂ ਲਈ ਸੁਰੱਖਿਅਤ ਨਹੀਂ ਰਿਹਾ।
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
