--- a/pt-BR/upgradedialog.lang
+++ b/pt-BR/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 Baixe o Firefox mais recente
 
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+fique seguro online
 
 
 ;Enjoy new features
-Enjoy new features
+aproveite os novos recursos
 
 
 ;URGENT!
-URGENT!
+URGENTE!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+A sua versão do Firefox não está mais protegida contra ataques online.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
