--- a/pt-PT/upgradedialog.lang
+++ b/pt-PT/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 Obtenha o novo Firefox
 
@@ -30,7 +27,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+<a %s>Obter a actualização</a> - é rápido e gratuito!
 
 
 ;get the latest in security
@@ -38,7 +35,7 @@ get the latest in security
 
 
 ;experience faster performance
-experience faster performance
+tenha um melhor desempenho
 
 
 ;enjoy greater customization
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+mantenha-se seguro online
 
 
 ;Enjoy new features
-Enjoy new features
+aprecie as novas funcionalidades
 
 
 ;URGENT!
-URGENT!
+URGENTE!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+A sua versão do Firefox já não está protegida contra ataques online.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
