--- a/rm/upgradedialog.lang
+++ b/rm/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 Retschaiva il pli nov Firefox
 
@@ -30,7 +27,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+<a %s>Telechargiar l'actualisaziun</a> - spert e gratuit!
 
 
 ;get the latest in security
@@ -38,7 +35,7 @@ get the latest in security
 
 
 ;experience faster performance
-experience faster performance
+retschaiva dapli prestaziun
 
 
 ;enjoy greater customization
@@ -50,11 +47,11 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+navighescha segir en la rait
 
 
 ;Enjoy new features
-Enjoy new features
+giauda las novas funcziuns
 
 
 ;URGENT!
@@ -62,7 +59,7 @@ URGENT!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+Tia versiun da Firefox na ta protegia betg pli cunter attatgas ord l'internet.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
