--- a/ro/upgradedialog.lang
+++ b/ro/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 Obține noul Firefox
 
@@ -30,7 +27,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+<a %s>Faceți actualizarea</a> - este rapidă și gratuită!
 
 
 ;get the latest in security
@@ -38,7 +35,7 @@ get the latest in security
 
 
 ;experience faster performance
-experience faster performance
+obțineți performanțe mai bune
 
 
 ;enjoy greater customization
@@ -50,11 +47,11 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+stați online în siguranță
 
 
 ;Enjoy new features
-Enjoy new features
+profitați de noile funcționalități
 
 
 ;URGENT!
@@ -62,7 +59,7 @@ URGENT!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+Versiunea dumneavoastră de Firefox nu mai este protejată împotriva atacurilor online.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
