--- a/ru/upgradedialog.lang
+++ b/ru/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 Загрузите новейший Firefox
 
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+обеспечьте безопасность в Интернете
 
 
 ;Enjoy new features
-Enjoy new features
+насладитесь новыми возможностями
 
 
 ;URGENT!
-URGENT!
+ВНИМАНИЕ!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+Ваша версия Firefox устарела и не защищена от атак из Интернета.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
