--- a/sq/upgradedialog.lang
+++ b/sq/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 Merrni Firefox-in Më të Ri
 
@@ -30,7 +27,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+<a %s>Merrni përmirësimin</a> - është falas dhe shkarkohet shpejt!
 
 
 ;get the latest in security
@@ -38,7 +35,7 @@ get the latest in security
 
 
 ;experience faster performance
-experience faster performance
+arrini punim më të shpejtë
 
 
 ;enjoy greater customization
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+jini i sigurt kur jeni online
 
 
 ;Enjoy new features
-Enjoy new features
+shijoni veçori të reja
 
 
 ;URGENT!
-URGENT!
+URGJENTE!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+Versioni juaj i Firefox-it nuk është më i mbrojtur nga sulmet online.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
