--- a/ta-LK/upgradedialog.lang
+++ b/ta-LK/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 புதிய Firefox இனைப் பெற்றுக்கொள்ளுங்கள்
 
@@ -30,7 +27,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+<a %s>புதிய பதிப்பினைப் பெறுக!</a> - இது வேகமானது-இலவசமானது!
 
 
 ;get the latest in security
@@ -38,7 +35,7 @@ get the latest in security
 
 
 ;experience faster performance
-experience faster performance
+வேகமான செயல்திறன்
 
 
 ;enjoy greater customization
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+இணையத்தில் பாதுகாப்பாக உலாவரல்
 
 
 ;Enjoy new features
-Enjoy new features
+புதிய அம்சங்கள்
 
 
 ;URGENT!
-URGENT!
+அறிவித்தல்!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+உங்களுடைய Firefox பதிப்பானது இணையத்தினூடான தாக்குதல்களிலிருந்து இனிமேல் பாதுகாக்கப்படாது.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
