--- a/th/upgradedialog.lang
+++ b/th/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 ใช้ Firefox รุ่นล่าสุด
 
@@ -30,7 +27,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+<a %s>ปรับรุ่น</a> - เร็วและฟรี!
 
 
 ;get the latest in security
@@ -38,7 +35,7 @@ get the latest in security
 
 
 ;experience faster performance
-experience faster performance
+ประสิทธิภาพดีกว่าเดิม
 
 
 ;enjoy greater customization
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+ปลอดภัยขณะออนไลน์
 
 
 ;Enjoy new features
-Enjoy new features
+สนุกกับความสามารถใหม่
 
 
 ;URGENT!
-URGENT!
+ด่วนที่สุด!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+Firefox รุ่นนี้ไม่อาจปกป้องคุณจากการโจมตีออนไลน์ได้อีกต่อไป
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
