--- a/zh-CN/upgradedialog.lang
+++ b/zh-CN/upgradedialog.lang
@@ -1,6 +1,3 @@
-# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
-
-
 ;Get the Newest Firefox
 获取最新版本的 Firefox
 
@@ -30,7 +27,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+<a %s>获取升级版本</a> - 快速且免费！
 
 
 ;get the latest in security
@@ -38,7 +35,7 @@ get the latest in security
 
 
 ;experience faster performance
-experience faster performance
+运行速度更快
 
 
 ;enjoy greater customization
@@ -50,19 +47,19 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Stay safe online
-Stay safe online
+确保网络安全
 
 
 ;Enjoy new features
-Enjoy new features
+令人欣喜的新功能
 
 
 ;URGENT!
-URGENT!
+紧急！
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+您使用的 Firefox 版本陈旧，可能会受到在线攻击。
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
