Translation of survey1.lang - part1
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103879 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ru/survey1.lang
+++ b/ru/survey1.lang
@@ -6,75 +6,75 @@ Thank you for helping with this research. We would like to ask you some question
 
 
 ;Which of the following age bands do you fall into?
-Which of the following age bands do you fall into?
+В какую из следующих возрастных категорий вы попадаете?
 
 
 ;16-24
-16-24
+16-24 {ok}
 
 
 ;25-34
-25-34
+25-34 {ok}
 
 
 ;35-44
-35-44
+35-44 {ok}
 
 
 ;45-54
-45-54
+45-54 {ok}
 
 
 ;55-64
-55-64
+55-64 {ok}
 
 
 ;65+
-65+
+старше 65
 
 
 ;Please indicate your gender
-Please indicate your gender
+Пожалуйста, укажите ваш пол
 
 
 ;Male
-Male
+Мужской
 
 
 ;Female
-Female
+Женский
 
 
 ;Which of the following web browsers do you use on your desktop computer or laptop at the moment, either at home or at work?
-Which of the following web browsers do you use on your desktop computer or laptop at the moment, either at home or at work?
+Какой из следующих веб-браузеров вы используете сейчас на вашем настольном или переносном компьютере, либо дома, либо на работе?
 
 
 ;Apple Safari
-Apple Safari
+Apple Safari {ok}
 
 
 ;Google Chrome
-Google Chrome
+Google Chrome {ok}
 
 
 ;Microsoft Internet Explorer
-Microsoft Internet Explorer
+Microsoft Internet Explorer {ok}
 
 
 ;Mozilla Firefox
-Mozilla Firefox
+Mozilla Firefox {ok}
 
 
 ;Opera
-Opera
+Opera {ok}
 
 
 ;Another browser
-Another browser
+Другой браузер
 
 
 ;Don’t know
-Don’t know
+Не знаю
 
 
 ;How likely or unlikely are you to recommend Firefox to a friend or colleague?
@@ -102,59 +102,59 @@ I am very unlikely to recommend Firefox and would even consider recommending aga
 
 
 ;And how much do you like or dislike Firefox?
-And how much do you like or dislike Firefox?
+Как сильно вам нравится или не нравится Firefox?
 
 
 ;Dislike a great deal
-Dislike a great deal
+Очень не нравится
 
 
 ;Dislike a little
-Dislike a little
+Немного не нравится
 
 
 ;Neither like nor dislike
-Neither like nor dislike
+Ни нравится ни не нравится
 
 
 ;Like a little
-Like a little
+Немного нравится
 
 
 ;Like a great deal
-Like a great deal
+Очень нравится
 
 
 ;So overall, taking everything into account, how satisfied or dissatisfied are you with Firefox?
-So overall, taking everything into account, how satisfied or dissatisfied are you with Firefox?
+В общем, принимая все факторы во внимание, насколько вы довольны или не довольны работой с Firefox?
 
 
 ;Extremely dissatisfied
-Extremely dissatisfied
+Очень недоволен
 
 
 ;Dissatisfied
-Dissatisfied
+Недоволен
 
 
 ;Somewhat dissatisfied
-Somewhat dissatisfied
+Слегка недоволен
 
 
 ;Neither satisfied nor dissatisfied
-Neither satisfied nor dissatisfied
+Ни доволен ни недоволен
 
 
 ;Somewhat satisfied
-Somewhat satisfied
+Слегка доволен
 
 
 ;Satisfied
-Satisfied
+Доволен
 
 
 ;Extremely satisfied
-Extremely satisfied
+Очень доволен
 
 
 ;For each of the following statements, could you please indicate whether you:
@@ -178,11 +178,11 @@ There are no right or wrong answers, so please answer as honestly as you can.
 
 
 ;A. Firefox is made by Mozilla
-A. Firefox is made by Mozilla
+A. Firefox сделан Mozilla
 
 
 ;B. Mozilla is a non-profit organisation
-B. Mozilla is a non-profit organisation
+B. Mozilla является некоммерческой организацией
 
 
 ;C. Mozilla’s mission is to make the web a better place
@@ -190,7 +190,7 @@ C. Mozilla’s mission is to make the web a better place
 
 
 ;D. Firefox was the first web browser
-D. Firefox was the first web browser
+D. Firefox был первым веб-браузером
 
 
 ;Which of the following would you say is your browser of choice?
@@ -210,11 +210,11 @@ A service that gives you secure access to your bookmarks, open tabs, and browsin
 
 
 ;Firefox for Android
-Firefox for Android
+Firefox для Android
 
 
 ;The Firefox browser on an Android smartphone or tablet
-The Firefox browser on an Android smartphone or tablet
+Браузер Firefox на смартфоне или планшете Android
 
 
 ;Mozilla Persona
@@ -226,15 +226,15 @@ An identity system that allows you to sign in to sites using an email address yo
 
 
 ;Mozilla Marketplace
-Mozilla Marketplace
+Магазин Mozilla
 
 
 ;Mozilla's online store for Open Web apps
-Mozilla's online store for Open Web apps
+Интернет-магазин Mozilla для открытых веб-приложений
 
 
 ;Addons for Firefox
-Addons for Firefox
+Дополнения для Firefox
 
 
 ;Customisations you can make to Firefox to add more functionality to the browser.
@@ -242,7 +242,7 @@ Customisations you can make to Firefox to add more functionality to the browser.
 
 
 ;None of these
-None of these
+Ничего из этих
 
 
 ;Which if any of the following Firefox services are you using at the moment?
@@ -254,103 +254,103 @@ Based on these descriptions, which if any, would you be interested in using in t
 
 
 ;Approximately how long have you been using Firefox?
-Approximately how long have you been using Firefox?
+Приблизительно, как долго вы используете Firefox?
 
 
 ;Up to 6 months
-Up to 6 months
+Менее 6 месяцев
 
 
 ;6 months to a year
-6 months to a year
+От 6 месяцев до 1 года
 
 
 ;1 to 2 years
-1 to 2 years
+От 1 до 2 лет
 
 
 ;2 to 3 years
-2 to 3 years
+От 2 до 3 лет
 
 
 ;3 to 4 years
-3 to 4 years
+От 3 до 4 лет
 
 
 ;4 to 5 years
-4 to 5 years
+От 4 до 5 лет
 
 
 ;More than 5 years
-More than 5 years
+Более 5 лет
 
 
 ;Do you use any of the following to browse the internet?
-Do you use any of the following to browse the internet?
+Какое из следующих устройств вы используете для работы в Интернете?
 
 
 ;Home PC or desktop computer
-Home PC or desktop computer
+Домашний ПК или настoльный компьютер
 
 
 ;Work PC or desktop computer
-Work PC or desktop computer
+Рабочий ПК или настoльный компьютер
 
 
 ;Home laptop
-Home laptop
+Домашний ноутбук
 
 
 ;Work laptop
-Work laptop
+Рабочий ноутбук
 
 
 ;Smartphone (eg: iPhone, Android phone)
-Smartphone (eg: iPhone, Android phone)
+Смартфон (напр.: iPhone, телефон на Android)
 
 
 ;Tablet (eg: iPad)
-Tablet (eg: iPad)
+Планшет (напр.: iPad)
 
 
 ;On average, approximately how many hours each day do you use the internet or browse web pages?
-On average, approximately how many hours each day do you use the internet or browse web pages?
+В среднем, примерно сколько часов в день вы используете Интернет или просматриваете веб-страницы?
 
 
 ;Less than half an hour each day
-Less than half an hour each day
+Менее получаса в день
 
 
 ;About an hour a day
-About an hour a day
+Примерно час в день
 
 
 ;2 hours a day
-2 hours a day
+2 часа в день
 
 
 ;3 hours a day
-3 hours a day
+3 часа в день
 
 
 ;4 hours a day
-4 hours a day
+4 часа в день
 
 
 ;5 hours a day
-5 hours a day
+5 часов в день
 
 
 ;More than 6 hours a day
-More than 6 hours a day
+Более 6 часов в день
 
 
 ;That is the end of the questionnaire. Thank you for your time.
-That is the end of the questionnaire. Thank you for your time.
+Это конец опросника. Спасибо, что потратили ваше время.
 
 
 ;Please enter a response
-Please enter a response
+Пожалуйста, введите ответ
 
 
 ;Illegal characters for single code input
@@ -362,7 +362,7 @@ Illegal characters for multi code input
 
 
 ;Please enter numbers only
-Please enter numbers only
+Пожалуйста, вводите только цифры
 
 
 ;Answer is outside of
@@ -374,15 +374,15 @@ No answer code cannot be mixed with other codes
 
 
 ;Too many replies maximum of …
-Too many replies maximum of …
+Слишком много ответов, максимумом является …
 
 
 ;Number of replies must be exactly …
-Number of replies must be exactly …
+Число ответов должно в точности равняться …
 
 
 ;Too many characters
-Too many characters
+Слишком много символов
 
 
 ;Illegal string for this template
@@ -394,14 +394,14 @@ Click here to go back into the survey
 
 
 ;Please answer highlighted question(s)
-Please answer highlighted question(s)
+Пожалуйста, ответьте на подсвеченный вопрос(ы)
 
 
 ;Please select one answer only.
-Please select one answer only.
+Пожалуйста, выберите только один ответ.
 
 
 ;Please select as many answers as apply.
-Please select as many answers as apply.
+Пожалуйста, выберите любые применимые ответы.
 
 
