Small changes for HU
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103900 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/hu/newsletter.lang
+++ b/hu/newsletter.lang
@@ -78,7 +78,7 @@ Szeretne további információt kapni? Mondjon magáról egy kicsivel többet é
 
 
 ;Firefox & You
-Firefox és én
+A Firefox és én
 
 
 ;Our Other Newsletters:
