--- a/eo/upgradedialog.lang
+++ b/eo/upgradedialog.lang
@@ -23,7 +23,7 @@ Pli da ravaĵoj ol iam ajn
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-Ekzistas nova versio de Firefox kiu povas pli bone protekti vin kontraŭ retatakoj.
+Ekzistas nova versio de Firefox kiu povas pli bone protekti vin kontraŭ retaj atakoj.
 
 
 ;Get the upgrade — it’s fast & free!
@@ -43,7 +43,7 @@ spertu pli rapida funkciado
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Via versio de Firefox estos baldaŭ sendefenda kontraŭ retatakoj.
+Via versio de Firefox estos baldaŭ sendefenda kontraŭ retaj atakoj.
 
 
 ;Stay safe online
@@ -63,11 +63,11 @@ Via versio de Firefox ne plu estas protektita kontraŭ retaj atakoj.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Tiu ĉi estas la lasta memorigo antaŭ on oni aŭtomate ĝisdatigos vian programon al la lasta versio
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox ne plu subtenas vian version de mastruma sistemo kaj estos sendefenda kontraŭ kelkaj retaj atakoj.
 
 
 ;We recommend:
