--- a/eo/upgradedialog.lang
+++ b/eo/upgradedialog.lang
@@ -31,7 +31,7 @@ Ricevu la ĝisdatigon — estas rapide kaj senpage!
 
 
 ;get the latest in security
-get the latest in security
+havu la lastajn sekurecajn aferojn
 
 
 ;experience faster performance
