l10n: fa, Updated snippets.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103910 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/fa/snippets.lang
+++ b/fa/snippets.lang
@@ -82,42 +82,42 @@
 
 
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
+<a href="%">فایرفاکس بتا را دریافت کنید</a>، بازخوردهای خود را برای ما ارسال کنید و به ما برای ساخت فایرفاکسی بهتر برای ۴۵۰ میلیون کاربر کمک کنید.
 
 
 ;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
-Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
+امکانات را آزمایش، اصلاح و احیا کنید و به ما در ساخت نسخه‌ای عالی‌تر از همیشه کمک کنید. <a href="%">امروز فایرفاکس بتا را دریافت کنید!</a>
 
 
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
+عاشق فایرفاکس هستید؟ می‌خواهید نسخه بعدی حتی بهتر باشد؟ <a href="%">فایرفاکس بتا را دریافت کنید</a> و همین امروز بازخورد خود را به ما ارسال کنید!
 
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
+آیا شما از آخرین نسخه بتا فایرفاکس استفاده می‌کنید؟ <a href="%">هم‌اکنون دریافت‌اش کنید</a> و به ما در بررسی آخرین امکانات کمک کنید.
 
 
 ;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
+بر روی آخرین نسخه بتا فایرفاکس نیستید؟ <a href="%">هم‌اکنون دریافتش کنید</a> تا در جریان آخرین چیزهایی که ما برای نسخه بعدی روی آن‌ها کار می‌کنیم قرار بگیرید.
 
 
 ;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
+می‌خواهید بازخورد خود را به اشتراک بگذارید؟ <a href="%">چگونگی این‌کار را ببینید</a> و کمک کنید تا نسخه بعدی فایرفاکس حتی عالی‌تر باشد.
 
 
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
+کاربران فایرفاکس بتا: از <a href="%">ارسال بازخوردهای خود</a> فراموش نکنید، تا ما آخرین تغییرات را در نسخه بعد اعمال کنیم.
 
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
-Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
+کمک کنید تا نسخه بعدی فایرفاکس حتی عالی‌تر باشد. <a href="%">جزئی از خانوادهٔ ما شوید</a> و فایرفاکس را با دوستانتان به‌اشتراک بگذارید.
 
 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
+دوستان خود را دعوت کنید تا پیش‌نمایشی از امکانات آینده‌ی فایرفاکس را ببینید. <a href="%">جزئی از خانوادهٔ ما شوید</a> و فایرفاکس آئورا را امروز به‌اشتراک بگذارید.
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+از فایرفاکس بر روی چند رایانه استفاده می‌کنید؟ از الان می‌توانید افزونه‌های خود را بین آن‌ها همگام کنید. <a href="%">چگونگی فعال‌سازی این امکان را یاد بگیرید.</a>
 
 
